messenger/include/dna/dna_engine.h

/* ============================================================================
 * OPAQUE TYPES
 * ============================================================================ */

typedef struct dna_engine dna_engine_t;
typedef uint64_t dna_request_id_t;
/**
 * User profile information (wallet addresses, socials, bio, avatar)
 * Synced with DHT dna_unified_identity_t structure
 */
typedef struct {
    /* Cellframe wallet addresses */
    char backbone[120];
    char alvin[120];            /* Alvin (cpunk mainnet) */

    /* External wallet addresses */
    char eth[128];              /* Ethereum address */
    char sol[128];
    char trx[128];              /* TRON address (T...) */
    char bsc[128];              /* BSC address (EVM-compatible) */

    /* Social links */
    char telegram[128];
    char twitter[128];          /* X (Twitter) handle */
    char github[128];
    char facebook[128];
    char instagram[128];
    char linkedin[128];
    char google[128];

    /* Profile info */
    char bio[512];
    char location[128];
    char website[256];
    char avatar_base64[20484];  /* Base64-encoded 64x64 PNG/JPEG (~20KB max) */
} dna_profile_t;
/* ============================================================================
 * ASYNC CALLBACK TYPES
 * ============================================================================ */

/**
 * Generic completion callback (success/error only)
 * Error is 0 (DNA_OK) on success, negative on error
 */
typedef void (*dna_completion_cb)(
    dna_request_id_t request_id,
    int error,
    void *user_data
);
/**
 * Display name callback
 */
typedef void (*dna_display_name_cb)(
    dna_request_id_t request_id,
    int error,
    const char *display_name,
    void *user_data
);
/**
 * Contacts list callback
 */
typedef void (*dna_contacts_cb)(
    dna_request_id_t request_id,
    int error,
    dna_contact_t *contacts,
    int count,
    void *user_data
);
/**
 * Contact requests callback (ICQ-style incoming requests)
 */
typedef void (*dna_contact_requests_cb)(
    dna_request_id_t request_id,
    int error,
    dna_contact_request_t *requests,
    int count,
    void *user_data
);
/**
 * Blocked users callback
 */
typedef void (*dna_blocked_users_cb)(
    dna_request_id_t request_id,
    int error,
    dna_blocked_user_t *blocked,
    int count,
    void *user_data
);
/**
 * Profile callback
 */
typedef void (*dna_profile_cb)(
    dna_request_id_t request_id,
    int error,
    dna_profile_t *profile,
    void *user_data
);
/**
 * Get avatar for fingerprint
 *
 * Returns cached avatar or fetches from DHT if not cached.
 * Avatar is base64 encoded.
 *
 * @param engine      Engine instance
 * @param fingerprint Identity fingerprint
 * @param callback    Called with avatar base64 (NULL if no avatar)
 * @param user_data   User data for callback
 * @return            Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_avatar(
    dna_engine_t *engine,
    const char *fingerprint,
    dna_display_name_cb callback,
    void *user_data
);
/**
 * Lookup name availability (name -> fingerprint)
 *
 * Checks if a name is already registered in DHT.
 * Returns fingerprint if name is taken, empty string if available.
 *
 * @param engine    Engine instance
 * @param name      Name to lookup (3-20 chars, alphanumeric + underscore)
 * @param callback  Called with fingerprint (empty if available)
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_lookup_name(
    dna_engine_t *engine,
    const char *name,
    dna_display_name_cb callback,
    void *user_data
);
/**
 * Get current identity's profile from DHT
 *
 * Loads wallet addresses, social links, bio, and avatar.
 *
 * @param engine    Engine instance
 * @param callback  Called with profile data
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_profile(
    dna_engine_t *engine,
    dna_profile_cb callback,
    void *user_data
);
/**
 * Lookup any user's profile by fingerprint
 *
 * Fetches profile from cache (if fresh) or DHT.
 * Use this to resolve a fingerprint to wallet address for sending tokens.
 *
 * @param engine      Engine instance
 * @param fingerprint User's fingerprint (128 hex chars)
 * @param callback    Called with profile data (NULL if not found)
 * @param user_data   User data for callback
 * @return            Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_lookup_profile(
    dna_engine_t *engine,
    const char *fingerprint,
    dna_profile_cb callback,
    void *user_data
);
/**
 * Refresh contact's profile from DHT (force, bypass cache)
 *
 * Forces a fresh fetch from DHT, ignoring cached data.
 * Use this when viewing a contact's profile to ensure up-to-date data.
 *
 * @param engine      Engine instance
 * @param fingerprint Contact's fingerprint (128 hex chars)
 * @param callback    Called with profile data (NULL if not found)
 * @param user_data   User data for callback
 * @return            Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_refresh_contact_profile(
    dna_engine_t *engine,
    const char *fingerprint,
    dna_profile_cb callback,
    void *user_data
);
/**
 * Update current identity's profile in DHT
 *
 * Saves wallet addresses, social links, bio, and avatar.
 * Signs with Dilithium5 before publishing.
 *
 * @param engine    Engine instance
 * @param profile   Profile data to save
 * @param callback  Called on completion
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_update_profile(
    dna_engine_t *engine,
    const dna_profile_t *profile,
    dna_completion_cb callback,
    void *user_data
);
/* ============================================================================
 * 3. CONTACTS (3 async functions)
 * ============================================================================ */

/**
 * Get contact list
 *
 * Returns contacts from local database.
 *
 * @param engine    Engine instance
 * @param callback  Called with contacts array
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_contacts(
    dna_engine_t *engine,
    dna_contacts_cb callback,
    void *user_data
);
/**
 * Add contact by fingerprint or registered name
 *
 * Looks up public keys in DHT if needed.
 *
 * @param engine     Engine instance
 * @param identifier Fingerprint or registered name
 * @param callback   Called on completion
 * @param user_data  User data for callback
 * @return           Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_add_contact(
    dna_engine_t *engine,
    const char *identifier,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Remove contact
 *
 * @param engine      Engine instance
 * @param fingerprint Contact fingerprint
 * @param callback    Called on completion
 * @param user_data   User data for callback
 * @return            Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_remove_contact(
    dna_engine_t *engine,
    const char *fingerprint,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Set local nickname for a contact (synchronous)
 *
 * Sets a custom local nickname that overrides the DHT display name.
 * This is local-only and NOT synced to the network.
 *
 * @param engine      Engine instance
 * @param fingerprint Contact fingerprint (128 hex chars)
 * @param nickname    Nickname to set (NULL or empty to clear)
 * @return            0 on success, negative error code on failure
 */
DNA_API int dna_engine_set_contact_nickname_sync(
    dna_engine_t *engine,
    const char *fingerprint,
    const char *nickname
);
/* ============================================================================
 * 3.5 CONTACT REQUESTS (ICQ-style mutual approval)
 * ============================================================================ */

/**
 * Send contact request to another user
 *
 * Creates a signed contact request and publishes it to the recipient's
 * DHT inbox at SHA3-512(recipient_fingerprint + ":requests").
 * The recipient will see this as a pending request.
 *
 * @param engine               Engine instance
 * @param recipient_fingerprint Recipient's fingerprint (128 hex chars)
 * @param message              Optional message (can be NULL, max 255 chars)
 * @param callback             Called on completion
 * @param user_data            User data for callback
 * @return                     Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_send_contact_request(
    dna_engine_t *engine,
    const char *recipient_fingerprint,
    const char *message,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Get pending incoming contact requests
 *
 * Fetches both locally stored requests and new requests from DHT inbox.
 * Filters out blocked users and already-processed requests.
 *
 * @param engine    Engine instance
 * @param callback  Called with array of pending requests
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_contact_requests(
    dna_engine_t *engine,
    dna_contact_requests_cb callback,
    void *user_data
);
/**
 * Get count of pending incoming contact requests
 *
 * Synchronous function for badge display.
 *
 * @param engine Engine instance
 * @return       Number of pending requests, or -1 on error
 */
DNA_API int dna_engine_get_contact_request_count(dna_engine_t *engine);
/**
 * Approve a contact request (makes mutual contact)
 *
 * Moves the request to approved status and adds the requester
 * to contacts list. Also sends a reciprocal request so the
 * requester knows their request was accepted.
 *
 * @param engine      Engine instance
 * @param fingerprint Requester's fingerprint
 * @param callback    Called on completion
 * @param user_data   User data for callback
 * @return            Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_approve_contact_request(
    dna_engine_t *engine,
    const char *fingerprint,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Deny a contact request (ignorable, can retry later)
 *
 * Marks request as denied. The requester is not blocked and
 * can send another request in the future.
 *
 * @param engine      Engine instance
 * @param fingerprint Requester's fingerprint
 * @param callback    Called on completion
 * @param user_data   User data for callback
 * @return            Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_deny_contact_request(
    dna_engine_t *engine,
    const char *fingerprint,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Block a user permanently
 *
 * Adds user to blocklist. They cannot send messages or requests.
 * Any pending requests from this user are automatically removed.
 *
 * @param engine      Engine instance
 * @param fingerprint User's fingerprint to block
 * @param reason      Optional reason (can be NULL)
 * @param callback    Called on completion
 * @param user_data   User data for callback
 * @return            Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_block_user(
    dna_engine_t *engine,
    const char *fingerprint,
    const char *reason,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Unblock a user
 *
 * Removes user from blocklist. They can send requests again.
 *
 * @param engine      Engine instance
 * @param fingerprint User's fingerprint to unblock
 * @param callback    Called on completion
 * @param user_data   User data for callback
 * @return            Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_unblock_user(
    dna_engine_t *engine,
    const char *fingerprint,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Get list of blocked users
 *
 * @param engine    Engine instance
 * @param callback  Called with array of blocked users
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_blocked_users(
    dna_engine_t *engine,
    dna_blocked_users_cb callback,
    void *user_data
);
/**
 * Check if a user is blocked
 *
 * Synchronous function for quick checks.
 *
 * @param engine      Engine instance
 * @param fingerprint Fingerprint to check
 * @return            true if blocked, false otherwise
 */
DNA_API bool dna_engine_is_user_blocked(dna_engine_t *engine, const char *fingerprint);
/* ============================================================================
 * FOLLOWING (one-directional follow, v0.9.126+)
 * ============================================================================ */

/**
 * Follow a user (one-directional, no approval needed)
 *
 * @param engine     Engine instance
 * @param fingerprint 128-char hex fingerprint of user to follow
 * @param callback   Completion callback
 * @param user_data  User data for callback
 */
DNA_API dna_request_id_t dna_engine_follow(
    dna_engine_t *engine,
    const char *fingerprint,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Unfollow a user
 *
 * @param engine     Engine instance
 * @param fingerprint 128-char hex fingerprint of user to unfollow
 * @param callback   Completion callback
 * @param user_data  User data for callback
 */
DNA_API dna_request_id_t dna_engine_unfollow(
    dna_engine_t *engine,
    const char *fingerprint,
    dna_completion_cb callback,
    void *user_data
);