messenger/dna_messenger_flutter/lib/ffi/dna_bindings.dart


  late final _dna_engine_get_avatar = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaDisplayNameCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaDisplayNameCb>, Pointer<Void>)>('dna_engine_get_avatar');

  int dna_engine_get_avatar(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<DnaDisplayNameCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_avatar(engine, fingerprint, callback, user_data);
  }

  late final _dna_engine_lookup_name = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaDisplayNameCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaDisplayNameCb>, Pointer<Void>)>('dna_engine_lookup_name');

  int dna_engine_lookup_name(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> name,
    Pointer<DnaDisplayNameCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_lookup_name(engine, name, callback, user_data);
  }

  // ---------------------------------------------------------------------------
  // PROFILE
  // ---------------------------------------------------------------------------

  late final _dna_engine_get_profile = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaProfileCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaProfileCb>,
          Pointer<Void>)>('dna_engine_get_profile');

  int dna_engine_get_profile(
    Pointer<dna_engine_t> engine,
    Pointer<DnaProfileCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_profile(engine, callback, user_data);
  }

  late final _dna_engine_lookup_profile = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaProfileCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaProfileCb>, Pointer<Void>)>('dna_engine_lookup_profile');

  int dna_engine_lookup_profile(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<DnaProfileCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_lookup_profile(engine, fingerprint, callback, user_data);
  }

  late final _dna_engine_refresh_contact_profile = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaProfileCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaProfileCb>, Pointer<Void>)>('dna_engine_refresh_contact_profile');

  int dna_engine_refresh_contact_profile(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<DnaProfileCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_refresh_contact_profile(engine, fingerprint, callback, user_data);
  }

  late final _dna_engine_update_profile = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<dna_profile_t>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<dna_profile_t>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_update_profile');

  int dna_engine_update_profile(
    Pointer<dna_engine_t> engine,
    Pointer<dna_profile_t> profile,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_update_profile(engine, profile, callback, user_data);
  }

  // ---------------------------------------------------------------------------
  // CONTACTS
  // ---------------------------------------------------------------------------

  late final _dna_engine_get_contacts = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaContactsCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaContactsCb>,
          Pointer<Void>)>('dna_engine_get_contacts');

  int dna_engine_get_contacts(
    Pointer<dna_engine_t> engine,
    Pointer<DnaContactsCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_contacts(engine, callback, user_data);
  }

  late final _dna_engine_add_contact = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_add_contact');

  int dna_engine_add_contact(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> identifier,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_add_contact(engine, identifier, callback, user_data);
  }

  late final _dna_engine_remove_contact = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_remove_contact');

  int dna_engine_remove_contact(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_remove_contact(engine, fingerprint, callback, user_data);
  }

  // Set contact nickname (synchronous)
  late final _dna_engine_set_contact_nickname_sync = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>)>(
      'dna_engine_set_contact_nickname_sync');

  int dna_engine_set_contact_nickname_sync(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<Utf8> nickname,
  ) {
    return _dna_engine_set_contact_nickname_sync(engine, fingerprint, nickname);
  }

  // ---------------------------------------------------------------------------
  // CONTACT REQUESTS (ICQ-style)
  // ---------------------------------------------------------------------------

  late final _dna_engine_send_contact_request = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_send_contact_request');

  int dna_engine_send_contact_request(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> recipient_fingerprint,
    Pointer<Utf8> message,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_send_contact_request(
        engine, recipient_fingerprint, message, callback, user_data);
  }

  late final _dna_engine_get_contact_requests = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<DnaContactRequestsCb>,
          Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaContactRequestsCb>,
          Pointer<Void>)>('dna_engine_get_contact_requests');

  int dna_engine_get_contact_requests(
    Pointer<dna_engine_t> engine,
    Pointer<DnaContactRequestsCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_contact_requests(engine, callback, user_data);
  }

  late final _dna_engine_get_contact_request_count = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>),
      int Function(Pointer<dna_engine_t>)>('dna_engine_get_contact_request_count');

  int dna_engine_get_contact_request_count(Pointer<dna_engine_t> engine) {
    return _dna_engine_get_contact_request_count(engine);
  }

  late final _dna_engine_approve_contact_request = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_approve_contact_request');

  int dna_engine_approve_contact_request(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_approve_contact_request(engine, fingerprint, callback, user_data);
  }

  late final _dna_engine_deny_contact_request = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_deny_contact_request');

  int dna_engine_deny_contact_request(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_deny_contact_request(engine, fingerprint, callback, user_data);
  }

  late final _dna_engine_block_user = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_block_user');

  int dna_engine_block_user(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<Utf8> reason,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_block_user(engine, fingerprint, reason, callback, user_data);
  }

  late final _dna_engine_unblock_user = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_unblock_user');

  int dna_engine_unblock_user(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_unblock_user(engine, fingerprint, callback, user_data);
  }

  late final _dna_engine_get_blocked_users = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<DnaBlockedUsersCb>,
          Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaBlockedUsersCb>,
          Pointer<Void>)>('dna_engine_get_blocked_users');

  int dna_engine_get_blocked_users(
    Pointer<dna_engine_t> engine,
    Pointer<DnaBlockedUsersCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_blocked_users(engine, callback, user_data);
  }

  late final _dna_engine_is_user_blocked = _lib.lookupFunction<
      Bool Function(Pointer<dna_engine_t>, Pointer<Utf8>),
      bool Function(Pointer<dna_engine_t>, Pointer<Utf8>)>('dna_engine_is_user_blocked');

  bool dna_engine_is_user_blocked(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
  ) {
    return _dna_engine_is_user_blocked(engine, fingerprint);
  }

  // ---------------------------------------------------------------------------
  // FOLLOWING
  // ---------------------------------------------------------------------------

  late final _dna_engine_follow = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_follow');

  int dna_engine_follow(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_follow(engine, fingerprint, callback, user_data);
  }

  late final _dna_engine_unfollow = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_unfollow');
